<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAEFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">


        <TextView
            android:id="@+id/textBox"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="Hello World!"
            android:textAlignment="center"
            android:elevation="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Text"
                android:textAlignment="center"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:inputType="text"
                android:text="@string/Name"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="4dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_upload" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Tamanho"
            android:textAlignment="inherit"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:min="10"
                android:max="80"/>

            <TextView
                android:id="@+id/textoLetra"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Estilo"
            android:textAlignment="inherit" />


        <CheckBox
            android:id="@+id/checkNegrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Negrito" />

        <CheckBox
            android:id="@+id/checkItalico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Itálico" />

        <CheckBox
            android:id="@+id/checkMaiusculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Maiúsculo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cor" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbVermelho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Vermelho" />

            <RadioButton
                android:id="@+id/rbVerde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Verde" />

            <RadioButton
                android:id="@+id/rbAzul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Azul" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>

